src/App.css
.App {
  text-align: center;
}

button {
  color: black;
  font-weight: bold;
  border-radius: 10vw;
  border: none;
  padding: 1%;
}

ul {
  list-style-type: none;
}

body {
  margin: 0;
  max-width: 100%;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

/* header  */

.hamburger {
  width: 50%;
  height: auto;
  display: none;
}

.header {
  background-color: rgb(81, 121, 177);
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
  width: 100%;
}

div.menu {
  color: white;
  font-weight: bold;
}

.userIcon {
  max-height: 5vh;
  max-width: 4vw;
  padding: 0;
  margin: 0;
  align-items: column;
  display: flex;
  align-items: center;
}

.signInButton {
  height: 5vh;
  min-width: 7vw;
  color: black;
  font-weight: bold;
  border-radius: 10vw;
  border: none;
  padding: 1%;
}

img.signInImage {
  height: 5vh;
  min-width: 4vw;
  margin: 1em;
  border-radius: 8%;
}

.sortCategory,
.sort {
  margin: 2vw;
  width: 12vw;
  height: 6vh;
}

h1 {
  margin: 0;
  text-decoration: none;
  padding: 3%;
  color: white;
  border-bottom: none;
}

a {
  text-decoration: none;
  color: rgb(37, 36, 36);
}

.hiddenNav {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  font-weight: bold;
}

.mobileNav {
  background-color: rgb(220, 216, 216);
  padding: 1%;
}

@media only screen and (max-width: 900px) {
  .signInImage {
    display: none;
  }

  .signInButton {
    display: none;
  }

  .hamburger {
    display: flex;
    color: white;
    padding-top: 2vh;
    margin-left: 2vw;
    width: 50%;
    height: auto;
  }

  .reviewNav {
    display: none;
  }
}

/* landing page */

.landing {
  display: grid;
  grid-template-columns: [first] 25% [line2] auto [line3] 25%;
  height: 100vh;
}

.sideBar {
  position: sticky;
  margin: 0;
  padding: 40% 20% 0% 20%;
  text-align: left;
  height: 100vh;
  top: 0;
  align-self: start;
  background-color: rgb(220, 216, 216);
}

.sideBar li {
  font-weight: bold;
  padding: 10% 0;
  color: grey;
}

.catImage {
  width: 2vw;
  padding: 0 1vw;
}

.categoryItem {
  display: flex;
  align-items: center;
}

.landing img {
  margin-right: 1%;
}

.categoryLogo {
  margin-right: 40%;
}

.landingContent {
  grid-column-start: 2;
  display: flex;
  flex-direction: column;
  margin-left: 4%;
  padding: 8% 0;
  margin-bottom: 4%;
}

.landingContentList {
  padding: 0;
  border: solid rgb(177, 173, 173) 2px;
  width: 80%;
  margin: auto;
  border-radius: 1vw;
}

.viewReviewsButton {
  height: 7vh;
  min-width: 12vw;
  color: white;
  font-weight: bold;
  border: none;
  border-radius: 10vw;
  background-color: rgb(81, 121, 177);
}

.landingContent li {
  border-bottom: solid rgb(202, 200, 200) 0.5px;
  padding: 2vh 0;
}

@media only screen and (max-width: 900px) {
  .landing {
    display: flex;
    flex-direction: column;
  }

  .sideBar {
    display: flex;
    flex-direction: row;
    position: sticky;
    flex-wrap: wrap;
    padding: 2% 0;
    height: auto;
    margin: 0;
    background-color: rgb(220, 216, 216);
  }

  .categoryItem {
    display: none;
    font-size: 0.7em;
    margin: 0 2vw;
  }
}

/* all reviews styling */

.reviewList {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: center;
  margin: 1%;
}

.reviewList li {
  border: solid 0.2em rgb(81, 121, 177);
  max-width: 400px;
  margin: 2%;
  border-radius: 3%;
}

.reviewCard img {
  width: 70%;
  height: auto;
  border-radius: 3%;
}

.reviewCard button {
  margin-bottom: 2vh;
  height: 5vh;
  min-width: 10vw;
  color: white;
  font-weight: bold;
  border: none;
  border-radius: 10vw;
  background-color: rgb(81, 121, 177);
}

.sortButtons {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: first baseline;
  margin: 0;
}

.sortBy {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.sortBy button,
.orderBy button {
  margin-bottom: 0;
}

.sortCategoryDropDown,
.orderByDropDown {
  padding: 0;
  margin: 0;
  display: flex;
  justify-content: center;
}

.sortCategoryDropDown ul {
  margin: 1vh;
  position: fixed;
  background-color: white;
  border: solid grey 0.5px;
  border-radius: 1vw;
  display: flex;
  flex-direction: column;
  justify-content: start;
  padding: 1%;
  height: 25vh;
  overflow-y: scroll;
}

.orderByDropDown ul {
  margin: 1vh;
  position: fixed;
  background-color: white;
  border: solid grey 0.5px;
  border-radius: 1vw;
  display: flex;
  flex-direction: column;
  justify-content: start;
  padding: 0 2%;
}

.sortCategoryDropDown ul li,
.orderByDropDown ul li {
  margin: 0.5vh 0;
  padding: 0.5vh 0;
  width: 100%;
}

.sortCategoryDropDown ul li:hover,
.orderByDropDown ul li:hover {
  background-color: rgb(192, 189, 189);
  cursor: pointer;
}

.sort,
.sortCategory {
  border-radius: 1vw;
}

.orderByDropDown {
  background-color: green;
}

/* single review page */
.singleItem {
  display: flex;
  justify-content: center;
}

.singleReview {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 6%;
  padding: 0;
  border: solid rgb(81, 121, 177);
  max-width: 400vw;
  border-radius: 2vw;
}

.singleReview img {
  width: 100%;
}

.backReviews {
  margin: 3%;
}

p.content {
  margin: auto;
}

.singleReview h2 {
  color: rgb(114, 144, 187);
  margin: 0;
  padding: 2%;
}

.singleReview p {
  padding: 0;
}

p.author {
  padding: 0;
  margin: 2vh;
}

.backReviews {
  max-width: 50%;
  margin: 4% auto;
}

.voteBox {
  width: 10%;
  margin: 2%;
}

.content p {
  text-align: left;
  padding: 0 2vh;
}

.reviewDetails p {
  font-weight: bold;
}

@media only screen and (min-width: 900px) {
  .singleReview {
    display: grid;
    grid-template-columns: [first] 35% [line2] 45%;
    grid-template-rows: [row1] 12vh [row2] 10vh [row3] 20vh [row4] 25vh [row5] 15vh [row6] 1fr;
  }

  h2 {
    grid-row-start: row1;
    grid-row-end: row1;
    grid-column-start: first;
    grid-column-end: span line3;
    display: flex;
    flex-direction: row;
    justify-content: center;
  }

  .content {
    grid-row-start: row3;
    grid-column-start: line2;
  }

  .singleReviewBodyImg {
    grid-row-start: row2;
    grid-row-end: row3;
    grid-column-start: first;
    grid-column-end: first;
  }
  .singleReview img {
    border-radius: 1vh;
    max-height: 28vh;
  }

  .reviewInfo {
    grid-row-start: row4;
    grid-column-start: first;
  }

  .reviewDetails {
    grid-row-start: row2;
    grid-row-end: row2;
    grid-column-start: line2;
    grid-column-end: line3;
  }

  .buttons {
    grid-row-start: row5;
    grid-column-start: first;
  }

  .buttons button {
    margin: 0 2vw;
  }

  .allComments {
    grid-row-start: row6;
    grid-column-start: first;
    grid-column-end: span line3;
  }
}

/* comment card */

.commentBox {
  border: solid grey 2px;
  margin: 1em;
  padding: 0.5em;
  border-radius: 1vh;
}

.commentList {
  margin: 0;
  padding: 0;
}

.commentList p {
  margin: 0;
  padding: 1em;
}

img.commentImg {
  width: 5vw;
  height: auto;
  border-radius: 100%;
}

li.commentListItem {
  border: solid black 2px;
  margin: 1em 0;
  padding: 0;
  border-radius: 1vh;
}

.commentTextBox {
  width: 40vw;
  height: 4vh;
}

.errorMessage {
  color: red;
  font-weight: bold;
}

form {
  display: flex;
  flex-direction: row;
  text-align: center;
  justify-content: space-around;
}
/* user */

.userCard {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.userCard li {
  margin: 1%;
  display: flex;
  flex-direction: column;
  padding: 1em;
  border: solid grey;
  border-radius: 5%;
  height: 40vh;
  width: 25vw;
  overflow: hidden;
}

.userCard li img {
  width: 8vw;
  height: 8vw;
  margin: auto;
}

.userCard li button {
  width: 15vw;
  margin: 0.5em;
}

.signedInAs {
  font-weight: bold;
  background-color: rgb(81, 121, 177);
  color: white;
  height: 4vh;
  border: solid white;
  margin-top: 2%;
}

.selected {
  background-color: rgb(176, 225, 176);
}

.notSelected {
  border: bold grey 6px;
}

@media only screen and (max-width: 900px) {
  .userCard li {
    width: 80%;
  }
}
/* votes */

.addVote,
.downVote {
  margin: 0;
  font-size: 1rem;
  border: none;
  border-radius: 10%;
  color: white;
  width: 6vw;
  height: auto;
}

p.voteCount {
  margin: 0;
  padding: 0;
}

.addVote {
  background-color: rgb(135, 232, 135);
}

.downVote {
  background-color: rgb(241, 130, 130);
}

.voteDiv p {
  margin: 0;
  padding: 0;
}

